--- a/app/globals.css
+++ b/app/globals.css
@@ -12,3 +12,16 @@
 }
 
 /* START: General styles */
+
+.flex-center {
+  @apply flex items-center justify-center;
+}
+
+.flex-between {
+  @apply flex justify-between items-center;
+}
+
+.custom-btn {
+  @apply flex flex-row relative justify-center items-center py-3 px-6 outline-none;
+}
+/* END: General styles */
